src/compiler/lexer_and_parser/KiwiParser.py
# Generated from Kiwi.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class KiwiParser ( Parser ):

    grammarFileName = "Kiwi.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'bool'", "'str'", "'++'", "'--'", 
                     "'='", "'('", "')'", "'if'", "'{'", "'}'", "'else if'", 
                     "'else'", "'while'", "'for'", "';'", "'in'", "'range'", 
                     "','", "'print'", "'fn'", "':'", "'()'", "'give'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'and'", "'or'", "'not'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "':='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "DIGIT", "BOOL", "ADD", "SUB", 
                      "MUL", "DIV", "AND", "OR", "NOT", "EQ", "NEQ", "GT", 
                      "GTE", "LT", "LTE", "ASSIGN", "ID", "WS", "Comment" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_declaration = 3
    RULE_incrementExpr = 4
    RULE_arithmeticExpr = 5
    RULE_booleanExpr = 6
    RULE_condExpr = 7
    RULE_ifExpr = 8
    RULE_elseIfExpr = 9
    RULE_elseExpr = 10
    RULE_whileExpr = 11
    RULE_forExpr = 12
    RULE_specialForExpr = 13
    RULE_display = 14
    RULE_function = 15
    RULE_params = 16
    RULE_give = 17
    RULE_functionCall = 18
    RULE_stringExpr = 19

    ruleNames =  [ "program", "block", "statement", "declaration", "incrementExpr", 
                   "arithmeticExpr", "booleanExpr", "condExpr", "ifExpr", 
                   "elseIfExpr", "elseExpr", "whileExpr", "forExpr", "specialForExpr", 
                   "display", "function", "params", "give", "functionCall", 
                   "stringExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    STRING=25
    DIGIT=26
    BOOL=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    AND=32
    OR=33
    NOT=34
    EQ=35
    NEQ=36
    GT=37
    GTE=38
    LT=39
    LTE=40
    ASSIGN=41
    ID=42
    WS=43
    Comment=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(KiwiParser.BlockContext,0)


        def getRuleIndex(self):
            return KiwiParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = KiwiParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KiwiParser.StatementContext)
            else:
                return self.getTypedRuleContext(KiwiParser.StatementContext,i)


        def getRuleIndex(self):
            return KiwiParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = KiwiParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [KiwiParser.EOF, KiwiParser.T__10]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [KiwiParser.T__0, KiwiParser.T__1, KiwiParser.T__2, KiwiParser.T__8, KiwiParser.T__13, KiwiParser.T__14, KiwiParser.T__19, KiwiParser.T__20, KiwiParser.T__23, KiwiParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 43
                    self.statement()
                    self.state = 46 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KiwiParser.T__0) | (1 << KiwiParser.T__1) | (1 << KiwiParser.T__2) | (1 << KiwiParser.T__8) | (1 << KiwiParser.T__13) | (1 << KiwiParser.T__14) | (1 << KiwiParser.T__19) | (1 << KiwiParser.T__20) | (1 << KiwiParser.T__23) | (1 << KiwiParser.ID))) != 0)):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(KiwiParser.DeclarationContext,0)


        def incrementExpr(self):
            return self.getTypedRuleContext(KiwiParser.IncrementExprContext,0)


        def condExpr(self):
            return self.getTypedRuleContext(KiwiParser.CondExprContext,0)


        def whileExpr(self):
            return self.getTypedRuleContext(KiwiParser.WhileExprContext,0)


        def forExpr(self):
            return self.getTypedRuleContext(KiwiParser.ForExprContext,0)


        def specialForExpr(self):
            return self.getTypedRuleContext(KiwiParser.SpecialForExprContext,0)


        def display(self):
            return self.getTypedRuleContext(KiwiParser.DisplayContext,0)


        def function(self):
            return self.getTypedRuleContext(KiwiParser.FunctionContext,0)


        def give(self):
            return self.getTypedRuleContext(KiwiParser.GiveContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(KiwiParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return KiwiParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = KiwiParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 50
                self.declaration()
                pass

            elif la_ == 2:
                self.state = 51
                self.incrementExpr()
                pass

            elif la_ == 3:
                self.state = 52
                self.condExpr()
                pass

            elif la_ == 4:
                self.state = 53
                self.whileExpr()
                pass

            elif la_ == 5:
                self.state = 54
                self.forExpr()
                pass

            elif la_ == 6:
                self.state = 55
                self.specialForExpr()
                pass

            elif la_ == 7:
                self.state = 56
                self.display()
                pass

            elif la_ == 8:
                self.state = 57
                self.function()
                pass

            elif la_ == 9:
                self.state = 58
                self.give()
                pass

            elif la_ == 10:
                self.state = 59
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(KiwiParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(KiwiParser.ASSIGN, 0)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(KiwiParser.ArithmeticExprContext,0)


        def booleanExpr(self):
            return self.getTypedRuleContext(KiwiParser.BooleanExprContext,0)


        def stringExpr(self):
            return self.getTypedRuleContext(KiwiParser.StringExprContext,0)


        def getRuleIndex(self):
            return KiwiParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = KiwiParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(KiwiParser.T__0)
                self.state = 63
                self.match(KiwiParser.ID)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.ASSIGN:
                    self.state = 64
                    self.match(KiwiParser.ASSIGN)
                    self.state = 65
                    self.arithmeticExpr(0)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(KiwiParser.T__1)
                self.state = 69
                self.match(KiwiParser.ID)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.ASSIGN:
                    self.state = 70
                    self.match(KiwiParser.ASSIGN)
                    self.state = 71
                    self.booleanExpr(0)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(KiwiParser.T__2)
                self.state = 75
                self.match(KiwiParser.ID)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.ASSIGN:
                    self.state = 76
                    self.match(KiwiParser.ASSIGN)
                    self.state = 77
                    self.stringExpr()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.match(KiwiParser.ID)
                self.state = 81
                self.match(KiwiParser.ASSIGN)
                self.state = 82
                self.arithmeticExpr(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.match(KiwiParser.ID)
                self.state = 84
                self.match(KiwiParser.ASSIGN)
                self.state = 85
                self.booleanExpr(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.match(KiwiParser.ID)
                self.state = 87
                self.match(KiwiParser.ASSIGN)
                self.state = 88
                self.stringExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operator = None # Token

        def ID(self):
            return self.getToken(KiwiParser.ID, 0)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(KiwiParser.ArithmeticExprContext,0)


        def ADD(self):
            return self.getToken(KiwiParser.ADD, 0)

        def SUB(self):
            return self.getToken(KiwiParser.SUB, 0)

        def MUL(self):
            return self.getToken(KiwiParser.MUL, 0)

        def DIV(self):
            return self.getToken(KiwiParser.DIV, 0)

        def getRuleIndex(self):
            return KiwiParser.RULE_incrementExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrementExpr" ):
                listener.enterIncrementExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrementExpr" ):
                listener.exitIncrementExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrementExpr" ):
                return visitor.visitIncrementExpr(self)
            else:
                return visitor.visitChildren(self)




    def incrementExpr(self):

        localctx = KiwiParser.IncrementExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_incrementExpr)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(KiwiParser.ID)
                self.state = 92
                self.match(KiwiParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(KiwiParser.ID)
                self.state = 94
                self.match(KiwiParser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(KiwiParser.ID)
                self.state = 96
                localctx.operator = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KiwiParser.ADD) | (1 << KiwiParser.SUB) | (1 << KiwiParser.MUL) | (1 << KiwiParser.DIV))) != 0)):
                    localctx.operator = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 97
                self.match(KiwiParser.T__5)
                self.state = 98
                self.arithmeticExpr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operator = None # Token

        def arithmeticExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KiwiParser.ArithmeticExprContext)
            else:
                return self.getTypedRuleContext(KiwiParser.ArithmeticExprContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(KiwiParser.FunctionCallContext,0)


        def DIGIT(self):
            return self.getToken(KiwiParser.DIGIT, 0)

        def SUB(self):
            return self.getToken(KiwiParser.SUB, 0)

        def ID(self):
            return self.getToken(KiwiParser.ID, 0)

        def MUL(self):
            return self.getToken(KiwiParser.MUL, 0)

        def DIV(self):
            return self.getToken(KiwiParser.DIV, 0)

        def ADD(self):
            return self.getToken(KiwiParser.ADD, 0)

        def getRuleIndex(self):
            return KiwiParser.RULE_arithmeticExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpr" ):
                listener.enterArithmeticExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpr" ):
                listener.exitArithmeticExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpr" ):
                return visitor.visitArithmeticExpr(self)
            else:
                return visitor.visitChildren(self)



    def arithmeticExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KiwiParser.ArithmeticExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_arithmeticExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 102
                self.match(KiwiParser.T__6)
                self.state = 103
                self.arithmeticExpr(0)
                self.state = 104
                self.match(KiwiParser.T__7)
                pass

            elif la_ == 2:
                self.state = 106
                self.functionCall()
                pass

            elif la_ == 3:
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.SUB:
                    self.state = 107
                    self.match(KiwiParser.SUB)


                self.state = 110
                self.match(KiwiParser.DIGIT)
                pass

            elif la_ == 4:
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.SUB:
                    self.state = 111
                    self.match(KiwiParser.SUB)


                self.state = 114
                self.match(KiwiParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 123
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = KiwiParser.ArithmeticExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpr)
                        self.state = 117
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 118
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KiwiParser.MUL or _la==KiwiParser.DIV):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.arithmeticExpr(7)
                        pass

                    elif la_ == 2:
                        localctx = KiwiParser.ArithmeticExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpr)
                        self.state = 120
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 121
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KiwiParser.ADD or _la==KiwiParser.SUB):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        self.arithmeticExpr(6)
                        pass

             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BooleanExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operator = None # Token

        def arithmeticExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KiwiParser.ArithmeticExprContext)
            else:
                return self.getTypedRuleContext(KiwiParser.ArithmeticExprContext,i)


        def GT(self):
            return self.getToken(KiwiParser.GT, 0)

        def LT(self):
            return self.getToken(KiwiParser.LT, 0)

        def GTE(self):
            return self.getToken(KiwiParser.GTE, 0)

        def LTE(self):
            return self.getToken(KiwiParser.LTE, 0)

        def EQ(self):
            return self.getToken(KiwiParser.EQ, 0)

        def NEQ(self):
            return self.getToken(KiwiParser.NEQ, 0)

        def booleanExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KiwiParser.BooleanExprContext)
            else:
                return self.getTypedRuleContext(KiwiParser.BooleanExprContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(KiwiParser.FunctionCallContext,0)


        def BOOL(self):
            return self.getToken(KiwiParser.BOOL, 0)

        def NOT(self):
            return self.getToken(KiwiParser.NOT, 0)

        def ID(self):
            return self.getToken(KiwiParser.ID, 0)

        def AND(self):
            return self.getToken(KiwiParser.AND, 0)

        def OR(self):
            return self.getToken(KiwiParser.OR, 0)

        def getRuleIndex(self):
            return KiwiParser.RULE_booleanExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpr" ):
                listener.enterBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpr" ):
                listener.exitBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanExpr" ):
                return visitor.visitBooleanExpr(self)
            else:
                return visitor.visitChildren(self)



    def booleanExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KiwiParser.BooleanExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_booleanExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 129
                self.arithmeticExpr(0)
                self.state = 130
                localctx.operator = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KiwiParser.EQ) | (1 << KiwiParser.NEQ) | (1 << KiwiParser.GT) | (1 << KiwiParser.GTE) | (1 << KiwiParser.LT) | (1 << KiwiParser.LTE))) != 0)):
                    localctx.operator = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self.arithmeticExpr(0)
                pass

            elif la_ == 2:
                self.state = 133
                self.match(KiwiParser.T__6)
                self.state = 134
                self.booleanExpr(0)
                self.state = 135
                self.match(KiwiParser.T__7)
                pass

            elif la_ == 3:
                self.state = 137
                self.functionCall()
                pass

            elif la_ == 4:
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.NOT:
                    self.state = 138
                    self.match(KiwiParser.NOT)


                self.state = 141
                self.match(KiwiParser.BOOL)
                pass

            elif la_ == 5:
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==KiwiParser.NOT:
                    self.state = 142
                    self.match(KiwiParser.NOT)


                self.state = 145
                self.match(KiwiParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 156
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 154
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                    if la_ == 1:
                        localctx = KiwiParser.BooleanExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpr)
                        self.state = 148
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 149
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KiwiParser.EQ or _la==KiwiParser.NEQ):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 150
                        self.booleanExpr(8)
                        pass

                    elif la_ == 2:
                        localctx = KiwiParser.BooleanExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpr)
                        self.state = 151
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 152
                        localctx.operator = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KiwiParser.AND or _la==KiwiParser.OR):
                            localctx.operator = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 153
                        self.booleanExpr(7)
                        pass

             
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CondExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifExpr(self):
            return self.getTypedRuleContext(KiwiParser.IfExprContext,0)


        def elseIfExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KiwiParser.ElseIfExprContext)
            else:
                return self.getTypedRuleContext(KiwiParser.ElseIfExprContext,i)


        def elseExpr(self):
            return self.getTypedRuleContext(KiwiParser.ElseExprContext,0)


        def getRuleIndex(self):
            return KiwiParser.RULE_condExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondExpr" ):
                listener.enterCondExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondExpr" ):
                listener.exitCondExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondExpr" ):
                return visitor.visitCondExpr(self)
            else:
                return visitor.visitChildren(self)




    def condExpr(self):
